# sc2hs

./: README.md  bot-config.yaml  hie.yaml  package.yaml  package.yaml.bak  plan-armyStrategicArchitecture.prompt.md  sc2hs-stack.cabal  sc2hs.cabal  stack.yaml
app/: AgentBulidUtils.hs  Army.hs  ArmyLogic.hs  BotDynamicState.hs  Main.hs  TestBot.hs
data/: data.json
docs/: hls-cross-package-navigation.md
grids/: gameinfo
lambdarookie01/: lambdarookie01.cabal  package.yaml
lambdarookie01/src/: AgentBulidUtils.hs  ArmyLogic.hs  BotDynamicState.hs  Intent.hs  Main.hs  PlanM.hs  Squad.hs  SquadRetreat.hs  Target.hs  TestBot.hs
lambdarookie01/test/: Spec.hs  TestFixtures.hs  TestIntegrationRealGame.hs  TestIntentDsl.hs  TestStepFlow.hs
sc2-proto/: Setup.hs  package.yaml  sc2-proto.cabal
sc2api/: Setup.hs  package.yaml  sc2api.cabal
sc2mapdump/: sc2mapdump.cabal
sc2mapdump/src/: Main.hs
sc2monad/: check_object_orientation.txt  choke_point.txt  grid_to_segment.txt  outgrid_segmented_start.txt  outgrid_with_all_chokes.txt  outgrid_with_clasters.txt  outgrid_with_first_choke.txt  package.yaml  sc2monad.cabal
scripts/: convert_cpp_enum.py  dump-grids.sh  reindex-hls.sh  watch-hie.sh
src/: AbilityId.hs  Actions.hs  Agent.hs  Bot.hs  BuffId.hs  Footprint.hs  Grid.hs  Observation.hs  Proto.hs  SC2.hs  StepMonad.hs  StepMonadUtils.hs  TestProto.hs  UnitAbilities.hs  UnitPool.hs  UnitTypeId.hs  UnitTypeId.py  Units.hs  UnitsTh.hs  UpgradeId.hs  Utils.hs
test/: Spec.hs  TestGrid.hs  TestTechTree.hs  TestUnits.hs
websockets-0.12.7.3/: websockets.cabal
(+119 files in other folders)
